app/assets/stylesheets/events.css.scss
// Place all the styles related to the events controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "bootstrap";

$maincolor: lighten(#ccc, 40%);


.row_events:nth-child(odd) {
	background-color: white;
}

.row_events:nth-child(even) {
	background-color: #ccc;
}

#logo {
	font-size: 3em;
	text-align: center;
	font-weight: bold;
	border-top: 1px solid black;
	border-bottom: 1px solid black;
	background-color: #ccc;
	padding: 25px 0;
	margin-bottom: 25px;
}

ul {
	list-style-type: none;
}

.event_header {
	font-size: 1.25pxem;
	font-weight: 500;
}



.date {
	font-size: 1.50em;
}


.container-fluid .content {
	margin: 0 auto;
	width: 90%;
}

.row_events {
	padding: 10px 0px;
}



/*.glyphicon-star-empty {
	color: black;
	font-size: 2em;
	padding-right: 5px;
	margin-left: -20px;
}*/

.glyphicon-star.index{
	/*color: black;*/
	font-size: 2em;
	padding-right: 5px;
	margin-left: -20px;
}

.glyphicon-star.favorite{
	color: yellow;
	font-size: 2em;
	padding-right: 5px;
	margin-left: -20px;
}

.yellow {
	color: yellow;
	font-size: 2em;
}

.black {
	color: black;
	font-size: 2em;
}

#favorite_link {
	padding-right: 10px;
	padding-top: 10px;
	width: 100%;
	text-align: right;
	font-size: 1.25em;
}

@media only screen and (max-width: 500px) {
	.container-fluid .content, section {
		width: 100%;
		padding: 0px 0px !important;
	}
.glyphicon-star.index{
/*	color: blue;
*/
	padding-right: 0px;
	margin-left: 0px;
}

.glyphicon-star.favorite{
	color: yellow;
	font-size: 2em;
	padding-right: 0px;
	margin-left: 0px;
	}

}

